--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 		<form id="upload" action="/modules/file-upload/" method="POST" enctype="multipart/form-data">
 		
 			<fieldset>
-			<legend>CSV File Upload</legend>
+			<legend>Image File Upload</legend>
 				
 				<div id="upload-file-selector">
 					<button type="button" onclick="selectFile();">Select Files</button>
