--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8" />
-	<title>Upload and Parse CSV</title>
+	<title>Upload an Image!</title>
 	
 	<link rel="stylesheet" type="text/css" media="all" href="styles.css" />
 </head>
